@@ -1,4 +1,4 @@
 DIST sketch-0.2.90.tgz 2867504 RMD160 eb413cf57929adc59f9c793316c245c22a940e10 SHA1 0de46e1bebab0bfbb623256e2665a849356b1ddd SHA256 f69e0b9c96466a9c1c44f520a5a56af9891c93302c9a7a5dd337ab18371f7e62
-EBUILD sketch-0.2.90.ebuild 615 RMD160 adb2a85ef519bf45b467964f43aec3ed8019ce65 SHA1 cdcd7c973e7b6674fd774b6cfda33ef4c34b1f4c SHA256 dc7de920699fcc97e86f2aba5f78ae48a3aeea907318c9d9add28a2ba9d331cd
-MISC ChangeLog 242 RMD160 f402893d2c35a37c8fc9feff80513cad33c43800 SHA1 b508aacd7bf3b9394585a97f553b1a6df626c7ba SHA256 28da30412ab2cbf18d031edeef377dc2a55cb4dfc5239481bbc3fd472a8e9d0c
+EBUILD sketch-0.2.90-r1.ebuild 998 RMD160 691a78b4e9451acc78b1e574d93e7816c7450ad5 SHA1 704d95b09e93e6082dfff88c6365ff1b22099492 SHA256 dbc4ef3a460ac17453f164a759ca9d1d4222f9201f7cbf3cf92f5d61796441c5
+MISC ChangeLog 476 RMD160 7a42ca2bebb9cf22aa698ac60e8ea5fc63bac78c SHA1 38559028e0c092432a30d0c73bffb5865acfe4b2 SHA256 c0dec856cd92764ce61ec315cf80a460dee90609eab7d5a723e209ce3bd1e5bd
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
